--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
-                                    133 comments &nbsp;•&nbsp;
-                                    142.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17184539">Diamonds Are Bullshit</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -246,15 +226,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177241">Microsoft .Net Core telemetry is not opt-in</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 08:04:50 &nbsp;•&nbsp;
-                                    114 comments &nbsp;•&nbsp;
-                                    137.0 points
+                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
+                                    37 comments &nbsp;•&nbsp;
+                                    138.0 points
                                 </span>
                             </td>
                         </tr>
@@ -266,15 +246,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177241">Microsoft .Net Core telemetry is not opt-in</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    35 comments &nbsp;•&nbsp;
-                                    135.0 points
+                                    <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 08:04:50 &nbsp;•&nbsp;
+                                    114 comments &nbsp;•&nbsp;
+                                    137.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 00:56:31 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    123.0 points
+                                    124.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,8 +353,8 @@
                                     <a class="node" href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3064">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 00:47:59 &nbsp;•&nbsp;
-                                    18 comments &nbsp;•&nbsp;
-                                    120.0 points
+                                    19 comments &nbsp;•&nbsp;
+                                    122.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
+                                    41 comments &nbsp;•&nbsp;
+                                    108.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17181570">Our machine learning and NLP journey</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -494,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:06:07 &nbsp;•&nbsp;
                                     22 comments &nbsp;•&nbsp;
-                                    106.0 points
+                                    107.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    40 comments &nbsp;•&nbsp;
-                                    105.0 points
+                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
+                                    21 comments &nbsp;•&nbsp;
+                                    104.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
-                                    104.0 points
+                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
+                                    42 comments &nbsp;•&nbsp;
+                                    102.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 14:00:04.049371</strong>
+            <strong>Last update at 2018-05-30 14:10:03.282325</strong>
         </div>
     </div>
 </div>
