--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166631">Analog Devices AD9361 – when microchips are more profitable than drugs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
-                                    66 comments &nbsp;•&nbsp;
-                                    218.0 points
+                                    <a class="node" href="https://zeptobars.com/en/read/AD9361-SDR-Analog-Devices-DAC-ADC-65nm">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=erric">erric</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:26:48 &nbsp;•&nbsp;
+                                    60 comments &nbsp;•&nbsp;
+                                    219.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,15 +186,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
-                                    27 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,7 +474,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 23:59:50 &nbsp;•&nbsp;
                                     8 comments &nbsp;•&nbsp;
-                                    190.0 points
+                                    191.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 14:30:04.388581</strong>
+            <strong>Last update at 2018-05-30 14:40:04.173279</strong>
         </div>
     </div>
 </div>
