--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -186,26 +186,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck (2006)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
-                                    159 comments &nbsp;•&nbsp;
-                                    327.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17143163">Ditch the Batteries: Off-Grid Compressed Air Energy Storage</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -533,7 +513,7 @@
                                     <a class="node" href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:28:00 &nbsp;•&nbsp;
-                                    428 comments &nbsp;•&nbsp;
+                                    429 comments &nbsp;•&nbsp;
                                     263.0 points
                                 </span>
                             </td>
@@ -555,6 +535,26 @@
                                     2018-05-27 06:44:02 &nbsp;•&nbsp;
                                     154 comments &nbsp;•&nbsp;
                                     259.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
+                                    155 comments &nbsp;•&nbsp;
+                                    255.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 14:50:03.327014</strong>
+            <strong>Last update at 2018-05-30 15:00:03.720287</strong>
         </div>
     </div>
 </div>
