--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days (2015)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
+                                    25 comments &nbsp;•&nbsp;
+                                    181.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173283">APL deserves its renaissance too</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -295,26 +315,6 @@
                                     2018-05-28 23:34:29 &nbsp;•&nbsp;
                                     43 comments &nbsp;•&nbsp;
                                     173.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189905">Reddit just passed Facebook as #3 most popular website in US</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.alexa.com/topsites/countries/US">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:53:23 &nbsp;•&nbsp;
-                                    90 comments &nbsp;•&nbsp;
-                                    171.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 19:10:04.747909</strong>
+            <strong>Last update at 2018-05-30 19:20:04.201557</strong>
         </div>
     </div>
 </div>
