--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -144,6 +144,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17159694">Bitmovin (YC S15) Is Hiring a Head of Demand Generation in San Francisco</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://bitmovin.com/careers/?gh_jid=4033759002">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=slederer">slederer</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 01:55:14 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
+                                    1.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17158599">Nurx Is Hiring a Lead Front-End Engineer</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -399,7 +419,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 19:20:04.201557</strong>
+            <strong>Last update at 2018-05-30 19:30:04.189084</strong>
         </div>
     </div>
 </div>
