--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -186,26 +186,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186436">How Apple store all your email metadata for years on their servers</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://medium.com/bugbountywriteup/how-apple-stored-all-your-email-metadata-for-years-on-their-servers-2a61b1a3232d">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=zakki">zakki</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:09:51 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    18.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17182748">Why Is Front-End Development So Unstable? A Perspective</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -413,7 +393,27 @@
                                     <a class="node" href="https://cacm.acm.org/news/228215-autonomous-boats-could-service-some-cities-reducing-road-traffic/fulltext">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 17:35:07 &nbsp;•&nbsp;
-                                    7 comments &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
+                                    13.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17189615">A hat that prevents facial recognition</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.kickstarter.com/projects/smallsuccess/dont-let-the-internet-or-companies-steal-your-face">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=smallsuccess">smallsuccess</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 17:25:20 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     13.0 points
                                 </span>
                             </td>
@@ -493,7 +493,7 @@
                                     <a class="node" href="https://idea.popcount.org/2013-09-05-it-aint-about-the-callbacks/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=majke">majke</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 12:03:11 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
                                     12.0 points
                                 </span>
                             </td>
@@ -513,7 +513,7 @@
                                     <a class="node" href="https://techxplore.com/news/2018-05-traffic-tech-uk-cars-leverage.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 09:20:17 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     12.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 19:40:04.385870</strong>
+            <strong>Last update at 2018-05-30 19:50:04.580672</strong>
         </div>
     </div>
 </div>
