--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189905">Reddit just passed Facebook as #3 most popular website in US</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178905">Possible BGP hijack of 1.1.1.1</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.alexa.com/topsites/countries/US">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:53:23 &nbsp;•&nbsp;
-                                    258 comments &nbsp;•&nbsp;
-                                    414.0 points
+                                    <a class="node" href="https://bgpstream.com/event/138295">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pstadler">pstadler</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 13:24:53 &nbsp;•&nbsp;
+                                    146 comments &nbsp;•&nbsp;
+                                    419.0 points
                                 </span>
                             </td>
                         </tr>
@@ -454,7 +454,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:40:55 &nbsp;•&nbsp;
                                     348 comments &nbsp;•&nbsp;
-                                    357.0 points
+                                    358.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 21:00:05.084064</strong>
+            <strong>Last update at 2018-05-30 21:10:04.994339</strong>
         </div>
     </div>
 </div>
