--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190326">Intel Announces Optane DIMMs</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171101">Theorem Proving in Lean</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 18:37:35 &nbsp;•&nbsp;
-                                    70 comments &nbsp;•&nbsp;
-                                    152.0 points
+                                    <a class="node" href="https://leanprover.github.io/theorem_proving_in_lean/introduction.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=benwr">benwr</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 07:39:27 &nbsp;•&nbsp;
+                                    28 comments &nbsp;•&nbsp;
+                                    153.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,26 +466,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178244">The Philosophy of Computational Complexity</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://ristret.com/s/qk8wpt/philosophy_computational_complexity">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 11:51:42 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    122.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17190705">Actix: a small, pragmatic, and fast Rust web framework</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -493,8 +473,8 @@
                                     <a class="node" href="https://actix.rs/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:10:01 &nbsp;•&nbsp;
-                                    21 comments &nbsp;•&nbsp;
-                                    121.0 points
+                                    23 comments &nbsp;•&nbsp;
+                                    125.0 points
                                 </span>
                             </td>
                         </tr>
@@ -514,7 +494,27 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 12:17:25 &nbsp;•&nbsp;
                                     11 comments &nbsp;•&nbsp;
-                                    121.0 points
+                                    122.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17178244">The Philosophy of Computational Complexity</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://ristret.com/s/qk8wpt/philosophy_computational_complexity">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 11:51:42 &nbsp;•&nbsp;
+                                    13 comments &nbsp;•&nbsp;
+                                    122.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 21:20:04.465218</strong>
+            <strong>Last update at 2018-05-30 21:30:04.488952</strong>
         </div>
     </div>
 </div>
